--- a/package.json
+++ b/package.json
@@ -13,14 +13,21 @@
   "author": "Apache Cordova Team",
   "license": "Apache-2.0",
   "dependencies": {
+    "cordova-plugin-customurlscheme": "^5.0.2",
     "cordova-plugin-inappbrowser": "^5.0.0"
-  },
-  "devDependencies": {
-    "cordova-android": "^12.0.1"
   },
   "cordova": {
     "plugins": {
-      "cordova-plugin-inappbrowser": {}
-    }
+      "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-customurlscheme": {
+        "URL_SCHEME": "chinafoodonline"
+      }
+    },
+    "platforms": [
+      "android"
+    ]
+  },
+  "devDependencies": {
+    "cordova-android": "^12.0.1"
   }
 }
