--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.chinafoodonline.market",
-  "displayName": "cfomarket",
+  "displayName": "中国食品",
   "version": "1.0.0",
   "description": "A sample Apache Cordova application that responds to the deviceready event.",
   "main": "index.js",
